# neutral-atom-imaging-simulation

./: Makefile  Makefile.win  README.md  pipTest.ipynb  simulationSettings.cfg
include/: constructPSF.h  createSampleImage.h  distributionSampling.h  imageModulation.h  platformDefines.h  settings.h
pip_project/: LICENSE.txt  config.cfg  pyproject.toml  setup.py
pip_project/neutral_atom_imaging_simulation/: Camera.py  Experiment.py  ImageGenerator.py
src/: constructPSF.c  createSampleImage.c  distributionSampling.c  imageModulation.c  main.c  settings.c
